Bug fixes & settings UI improvements

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1676,6 +1676,7 @@
   "KnightedKillMonarch": "As the Knighted player, you cannot kill the Monarch",
   "RookieKillRoundOne": "As a Rookie, you cannot kill in the first round",
   "SocialiteTarget": "The target of the Socialite cannot be killed\\nYou were added to their Guest List",
+  "BodyguardProtected": "The Bodyguard protected your target and died for them",
   "SomeSortOfProtection": "This player is shielded due to a role-specific action",
   "HexButtonText": "Hex",
   "EscapeeAbilityButtonText": "TP",
@@ -2261,7 +2262,7 @@
   "LoadingHint.25": "Meeting not ending when everyone voted?\nPress F6 to end the meeting while also counting the votes!",
   "LoadingHint.26": "Do you have a friend who thinks they understand everything, and you want to prove them wrong?\nTurn on the Chemist role and see their reaction!",
   "LoadingHint.27": "The Dev's favorite roles are:\nEcho, Penguin, Rift Maker, Bubble, Evolver, Rogue, Vengeance....\nand basically all crewmate roles :D",
-  "LoadingHint.28": "Did you know?\nEHR has 7 different game modes! Try them out!\nSwitch game modes using the first setting on the Mod Settings tab!",
+  "LoadingHint.28": "Did you know?\nEHR has 7 different game modes! Try them out!\nSwitch game modes using the ⇄ button next to the huge title in the top left of the settings menu!",
   "LoadingHint.29": "Did you know?\nEHR has a unique game mode for expert gamers called Stop And Go!\nGive it a try after this game!",
   "LoadingHint.30": "Getting Crewmate over and over again? Didn't get to kill for the last half an hour?\nUnleash your bloodthirst in our Free For All game mode!",
   "LoadingHint.31": "Did you know?\nEHR has a custom Hide And Seek game mode with 12 special roles dedicated for this playstyle!",
@@ -2453,7 +2454,7 @@
   "YouAreHostSuffix": " (YOU!)",
   "Standard": "Standard",
   "SoloKombat": "Solo PVP",
-  "ModeSoloKombat": "Mode Solo PVP",
+  "ModeSoloKombat": "Gamemode: Solo PVP",
   "GameMode": "Game Mode",
   "PressTabToNextPage": "Press <color=#ff1919>Tab</color> or <color=#ff1919>Number</color> for Next Page...",
   "RoleSummaryText": "<u>Role Summary:</u>",
@@ -2829,6 +2830,7 @@
   "WWRampageCD": "Rampage Cooldown",
   "WWRampageDur": "Rampage Duration",
   "WWCanRampage": "Vent to begin Rampaging",
+  "WWCanRampageUnshift": "Press Unshift (shapeshift button) to begin Rampaging",
   "WWRampageOut": "You're no longer Rampaging",
   "WWRampageCountdown": "<color=#00ffa5>Rampage ends in</color> <b>{0}</b>s",
   "WWRampaging": "Rampaging",
@@ -3559,6 +3561,7 @@
   "LibrarianInfoLong": "(Impostors):\\nAs the Librarian, when you're in silencing mode, if someone reports a body next to you, you'll kill them instead. After you kill someone like this, everyone will see 'SSSH!' in red under your name.",
   "LibrarianRadius": "Silence Radius",
   "LibrarianShowSSAnimation": "Shapeshift Transformation Animation is Visible",
+  "LibrarianSilenceDuration": "Silence Duration",
   "LibrarianNameNotifyDuration": "SSSH! Name Text Duration",
   "LibrarianNameText": "SSSH!",
   "LibrarianModeText": "<color=#00ffa5>Mode:</color> <b>{0}</b>",
@@ -3801,6 +3804,7 @@
   "Rogue.Task": "Objective: <#ffff00>{0}</color>\nReward: <#00ffa5>{1}</color>",
   "Rogue.TaskCompleted": "<#00ff00>Objective Completed</color>",
   "Rogue.AllTasksCompleted": "<#00ff00>All Objectives Completed</color>",
+  "ModeStandard": "Gamemode: Standard",
   "FFA": "Free For All",
   "ModeFFA": "Gamemode: FFA",
   "ModeDescribe.FFA": "In the FFA (Free For All) gamemode, everyone is a killer and everyone can kill anyone. The last player alive wins!\\n\\nSome random events make this even more fun in the mean time!",
@@ -4052,7 +4056,9 @@
   "Beehive.Distance": "Distance to Walk",
   "Beehive.Time": "Time to Walk the Distance",
   "Beehive.StingCooldown": "Sting Cooldown",
+  "Beehive.StungPlayersDieOnMeeting": "Stung Players Die on Meeting Start",
   "Beehive.Notify": "<#ffff00>You were stung by the Beehive!\\nWalk {0} units away from the Beehive in {1}s or you die!</color>",
+  "SearchNoResult": "No results found",
   "Spurt": "Spurt",
   "Prefix.Spurt": "Spurt",
   "SpurtInfo": "Boosts Movement",
@@ -4064,19 +4070,19 @@
   "SpurtSuffix": "\\n« <color=#c9e8f5>Spurt</color>: {0}% »",
   "Nimble": "Nimble",
   "NimbleInfo": "Grants Vent Access",
-  "NimbleInfoLong": "\\nGrants Vent Access for Crewmate Roles.",
+  "NimbleInfoLong": "(Add-ons):\\nGrants Vent Access for Crewmate Roles.",
   "Prefix.Nimble": "Nimble",
   "Physicist": "Physicist",
   "PhysicistInfo": "Grants Portable Vitals Access",
-  "PhysicistInfoLong": "\\nGrants portable vitals access for crewmate Roles.",
+  "PhysicistInfoLong": "(Add-ons):\\nGrants portable vitals access for crewmate Roles.",
   "Prefix.Physicist": "Physicist",
   "Finder": "Finder",
   "FinderInfo": "Grants Access to Tracking Players",
-  "FinderInfoLong": "\\nGrants access to tracking players for crewmate roles.",
+  "FinderInfoLong": "(Add-ons):\\nGrants access to tracking players for crewmate roles.",
   "Prefix.Finder": "Finder",
   "Noisy": "Noisy",
   "NoisyInfo": "Grants Noisemaker Ability",
-  "NoisyInfoLong": "\\nGrants noisemaker ability for crewmate roles.",
+  "NoisyInfoLong": "(Add-ons):\\nGrants noisemaker ability for crewmate roles.",
   "Prefix.Noisy": "Noisy",
   "Clairvoyant": "Clairvoyant",
   "ClairvoyantInfo": "Know Remaining Killer Counts",
