--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1008,6 +1008,7 @@
   "GameStateCommand.ShowLoversState": "Show <#ff9ace>Lovers</color> pair state",
   "GameStateCommand.ShowTasks": "Show amount of completed tasks",
   "MinPlayersForGameStateCommand": "Minimum alive players to use this command",
+  "EveryoneSeesDeathReasons": "Everyone Sees Death Reasons",
   "DoorsResetMode": "Mode",
   "AllClosed": "Close All",
   "AllOpen": "Open All",
@@ -2110,7 +2111,7 @@
   "Warning.MismatchedVersion": "<b>{0}</b> has a different version than <b>{1}</b>",
   "Warning.AutoExitAtMismatchedVersion": "The host has no or a different version of {0}\\nYou will be kicked in {1}",
   "Warning.OneMinuteLeft": "<#ffff00>The lobby will close in 1 minute!</color>",
-  "Commands.NoAccess": "You don't have access to this command",
+  "Commands.NoAccess": "You don't have access to this command or cannot use it currently",
   "CommandDescription.LT": "View the lobby timer",
   "CommandDescription.Dump": "Dumps the log file to the desktop",
   "CommandDescription.Version": "View the current version of EHR",
