--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -610,7 +610,7 @@
   "CrewmateEHRInfoLong": "(Crewmates):\\nAs the Crewmate, your goal is quite simple. Find and exile the Impostors. Crewmates win by getting rid of all killers or by finishing all their tasks.",
   "NoisemakerEHRInfoLong": "(Crewmates):\\nAs the Noisemaker, when you die, all crewmates will get alerted and an arrow pointing to your body will appear.",
   "TrackerEHRInfoLong": "(Crewmates):\\nAs the Tracker, you can track players by placing a tracker on them using your track button.",
-  "PhantomEHRInfoLong": "(Crewmates):\\nAs the Phantom, you can go invisible for a short period of time. During this time, you can't be seen by Crewmates.",
+  "PhantomEHRInfoLong": "(Impostors):\\nAs the Phantom, you can go invisible for a short period of time. During this time, you can't be seen by Crewmates.",
   "BountyHunterInfoLong": "(Impostors):\\nIf you successfully eliminate your assigned target, your next kill cooldown will be reduced, but if you eliminate anyone else, your next kill cooldown will be lengthened; the target will switch after a predetermined time.",
   "FireWorksInfoLong": "(Impostors):\\nAs a Fireworker, you can plant up to three firework bombs using shapeshift/by petting your pet. If you're the last impostor standing, you can use shapeshift/pet to detonate the bombs and cause area damage. But be careful, the bombs can also harm you. If the bombs eliminate all surviving players, it's a victory for the impostors.",
   "SerialKillerInfoLong": "(Impostors):\\nYou have a shorter kill cooldown than other impostors, but you will die if you don't kill before the end of your shapeshift cooldown.",
@@ -674,7 +674,7 @@
   "NeedyInfoLong": "(Crewmates):\\nLazy Guy has one task and is immune to Impostor abilities. No add-ons.",
   "SuperStarInfoLong": "(Crewmates):\\nThe Super Star has a star logo next to their name, and can only be killed when the Murderer is alone with them. They cannot be guessed by Guessers.",
   "CyberStarInfoLong": "(Crewmates):\\nCrewmates see the kill-flash when the Celebrity dies, and get a notice at the next meeting. Impostors are unaware.",
-  "DemolitionistInfoLong": "(Crewmates):\\nWhen you get killed by someone, that person has 5 seconds to enter a vent, or else they suicide.",
+  "DemolitionistInfoLong": "(Crewmates):\\nWhen you get killed by someone, that person has 5 seconds to enter a vent, or else they suicide. The killer must be in the vent when the 5 seconds expire and not jump out sooner to survive.",
   "TaskManagerInfoLong": "(Crewmates):\\nYou see the total number of tasks completed (by everyone all together) next to your role name, which updates in real-time.",
   "NiceEraserInfoLong": "(Crewmates):\\nYou can erase the role of the person you vote. Their role will be reset to the basis of that role after this meeting. This has a limited number of uses.",
   "MayorInfoLong": "(Crewmates):\\nMayor's vote counts as multiple votes and may have the ability to trigger an emergency meeting.",
@@ -1073,9 +1073,11 @@
   "IgnoreCrewmates": "Ignore <color=#8cffff>Crewmates</color>",
   "IgnoreAfterAnyoneDied": "Ignore After First Death",
   "LightsOutSpecialSettings": "Fix Lights Special Settings",
+  "BlockDisturbancesToSwitches": "Block Switches When They Are Up",
   "DisableAirshipViewingDeckLightsPanel": "Disable Viewing Deck Lights Panel (Airship)",
   "DisableAirshipGapRoomLightsPanel": "Disable Gap Room Lights Panel (Airship)",
   "DisableAirshipCargoLightsPanel": "Disable Cargo Lights Panel (Airship)",
+  "KickNotJoinedPlayersRegularly": "Kick players who haven't joined the game every 25s in lobby",
   "RandomSpawn": "Random Spawns",
   "AirshipAdditionalSpawn": "Additional Spawn Locations (Airship)",
   "CommsCamouflage": "Camouflage during Comms Sabotage",
@@ -2308,6 +2310,7 @@
   "ERR-000-804-1": "EHR does not support the Vanilla HnS, so unloaded.",
   "ERR-001-000-3": "Main dictionary has duplicated keys.",
   "DeathCommand": "<#ffffff>You were killed by </color>{0}<#ffffff>\\nTheir role is </color>{1}",
+  "DeathCommandFail": "<#ff0000>The game could not determine your real killer.</color>",
   "DefaultSystemMessageTitle": "➡ SYSTEM MESSAGE ⬅",
   "MessageFromTheHost": "★ Host message ★",
   "SayTitle": "★ Moderator message ★",
@@ -2589,7 +2592,6 @@
   "PlayerInfo": "Player Info",
   "NoInfoExists": "No Info Exists",
   "PlayerLeftByAU-Anticheat": "<b>{0}</b> was banned by the Innersloth anti-cheat.",
-  "PlayerLeftByError": "Game will auto-end to prevent black screens.",
   "KickAndriodPlayer": "<b>{0}</b> was kicked due to playing on mobile.",
   "KickBecauseLowLevel": "<b>{0}</b> was kicked because their level was too low",
   "KickBecauseDiffrentVersionOrMod": "<b>{0}</b> was kicked because they had a different version of the mod",
@@ -4253,6 +4255,8 @@
   "Haunter.RevealNeutralKillers": "Can Reveal <#ffab1b>Neutral Killers</color>",
   "Haunter.RevealMadmates": "Can Reveal <#ff1919>Madmates</color>",
   "Haunter.NumberOfReveals": "Number of Players Revealed on Task Completion",
+  "Haunter.CanWinWithCrewmates": "Can Win With <#8cffff>Crewmates</color>",
+  "WWCO.IfFinishedTasks": "If Finished Tasks",
   "Prefix.Haunter": "Haunter",
   "GotGhostRoleNotify": "<#ffff00>You were assigned a ghost role!</color>",
   "NumOfTasks": "Number of Tasks to Finish",
