--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1711,6 +1711,7 @@
   "KickCommandKicked": "was kicked from the game.",
   "KickCommandKickedRole": "Their role was",
   "ModeratorTag": "<#8000ff>Moderator</color>",
+  "VIPTag": "<#ffff00>VIP</color>",
   "EnableAFKDetector": "Enable AFK Detector",
   "AFKWarning": "<#ffff00><size=90%>Please move to avoid being marked as AFK</color> <#ffffff>({0})</size></color>",
   "AFKSuffix": "<#ffa500>(AFK)</color>",
