Add Car & fix bugs

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1597,7 +1597,7 @@
   "TrialLimitPerMeeting": "Max Trials per Meeting",
   "TrialLimitPerGame": "Max Trials per Game",
   "JudgeCanTrialMadmate": "Can trial <color=#ff1919>Madmates</color>",
-  "JudgeCanTrialCharmed": "Can trial <color=#cf6acd>Charmed</color> players",
+  "JudgeCanTrialConverted": "Can trial <#ffab1b>Converted</color> players",
   "VeteranSkillMaxOfUseage": "(Initial) Max number of Alerts",
   "SwooperCooldown": "Swoop Cooldown",
   "SwooperDuration": "Swoop Duration",
@@ -2959,7 +2959,7 @@
   "Overheat.KCDDecreasePerIncreasedTemperature": "Kill Cooldown Decrease per Increased Temperature",
   "QuizMaster": "Quiz Master",
   "QuizMasterInfo": "Ask Questions to Players",
-  "QuizMasterInfoLong": "(Neutrals):\\nAs the Quiz Master, you can ask questions to players. If they answer correctly, nothing happens. If they answer incorrectly, they die.\\n\\nKill everyone to win!",
+  "QuizMasterInfoLong": "(Neutrals):\\nAs the Quiz Master, you can ask questions to players. If they answer correctly, nothing happens. If they answer incorrectly, they die.\\n\\nKill everyone to win!\\n\\n<u>Notes:</u>\\n- The Quiz Master gets sent a copy of the question message sent to their target\\n- The Quiz Master can single click with their kill button on someone to mark them as their target and thus ask them a question in the next meeting, or double click to kill them normally.",
   "QuizMaster.QuestionSample": "{0}\\n{1}\\n\\n<size=80%>To answer, type /qa (A/B/C) (ex.: '/qa C')\\nTo see this question again, type /qs\\nIf you don't answer or answer incorrectly, you die",
   "QuizMaster.Title": "Quiz Master Question",
   "QuizMaster.QuestionSample.Title": "Quiz Master Questioned You",
