--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2817,6 +2817,10 @@
   "notifyJailedOnMeeting": "Notify Jailed player when meeting starts",
   "JailedNotifyMsg": "You have been locked up in Jail by the Jailor. No one can guess or judge you and you can only guess Jailor.\\n\\nIf Jailor votes you, you will be executed after the meeting ends.",
   "JailorTitle": "Jailor Message",
+  "Car": "Car",
+  "CarInfo": "Drive around the map",
+  "CarInfoLong": "(Crewmates):\\nAs the Car, you can drive around the map. Everyone sees you as a car, including yourself. When you touch someone, you propel them far away in the direction you were driving. This role has absolutely no purpose other than to have fun.",
+  "Car.PropelDistance": "Propel Distance",
   "Shiftguard": "Shiftguard",
   "ShiftguardInfo": "Know When Someone Shapeshifts",
   "ShiftguardInfoLong": "(Crewmates):\\nAs the Shiftguard, when someone shapeshifts or unshifts, you will be notified",
