--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -22,6 +22,9 @@
   "TeamCrewmate": "Crewmate",
   "TeamMadmate": "Madmate",
   "Neutral": "Neutral",
+  "ShortTeamName.Impostor": "Imp",
+  "ShortTeamName.Crewmate": "Crew",
+  "ShortTeamName.Neutral": "Neut",
   "YouAreCrewmate": "<size=1.7><color=#ffffff>TEAM:</color> CREWMATES</size>",
   "YouAreImpostor": "<size=0>.</size>",
   "YouAreNeutral": "<size=1.7><color=#ffffff>TEAM:</color> NEUTRAL</size>",
@@ -55,7 +58,8 @@
   "ROT.MadMates": "★ Madmate Roles",
   "ROT.Crewmate_Normal": "★ Non-Killing Crewmate Roles",
   "ROT.Crewmate_ImpostorBased": "★ Crewmate Roles With Kill Buttons",
-  "ROT.Neutral_NonKilling": "★ Non-Killing Neutral Roles",
+  "ROT.Neutral_Evil": "★ Neutral Evil Roles",
+  "ROT.Neutral_Benign": "★ Neutral Benign Roles",
   "ROT.Neutral_Killing": "★ Neutral Killing Roles",
   "ROT.Vanilla": "★ Vanilla Roles",
   "ROT.Basic": "★ Basic Roles",
@@ -1329,7 +1333,6 @@
   "ExecutionerChangeRolesAfterTargetKilled": "When Target Dies, <color=#c0c0c0>Executioner</color> becomes",
   "CanTargetNeutralBenign": "Can Target <color=#ffab1b>Neutral</color> <color=#046300>Benign</color>",
   "CanTargetNeutralEvil": "Can Target <color=#ffab1b>Neutral</color> <color=#912900>Evil</color>",
-  "CanTargetNeutralChaos": "Can Target <color=#ffab1b>Neutral</color> <color=#D4AF37>Chaos</color>",
   "SidekickSheriffCanGoBerserk": "<color=#00b4eb>Recruited</color> <color=#f8cd46>Sheriff</color> Can Go Nuts",
   "LawyerCanTargetImpostor": "Can Target <color=#ff1919>Impostors</color>",
   "LawyerCanTargetNeutralKiller": "Can Target <color=#ffab1b>Neutral Killers</color>",
@@ -1648,7 +1651,6 @@
   "CharmedCountMode.None": "Nothing",
   "CharmedCountMode.Succubus": "<color=#cf6acd>Cultist</color>",
   "CharmedCountMode.Original": "Original Team",
-  "JackalCanWinBySabotageWhenNoImpAlive": "When all <color=#ff1919>Impostors</color> are dead, the <color=#00b4eb>Jackal</color> wins by sabotage instead",
   "ResetKillCooldownWhenPlayerGetKilled": "Reset kill cooldown if someone gets killed by another player",
   "ResetKillCooldownOn": "Kill Cooldown On Reset",
   "JackalCanRecruitSidekick": "Can recruit <color=#00b4eb>Sidekick</color>",
@@ -1930,6 +1932,8 @@
   "KB_Buff_HPMax": "Gain: HP Max +{0}",
   "KB_Buff_HPReco": "Gain: Recover HP Per Second +{0}",
   "KB_Buff_ATK": "Gain: Attack +{0}",
+  "KB_Buff_DF": "Gain: Defense +{0}",
+  "NKWinsBySabotageIfNoImpAlive": "<#ffab1b>Neutral</color> <#ff1919>Killers</color> win by critical sabotage time limit if there are no <#ff1919>Impostors</color> alive",
   "MorticianGetNoInfo": "According to your inspection, <b>{0}</b> did not seem to have contact with anyone during their lifetime.",
   "MorticianGetInfo": "According to your inspection, the last person <b>{0}</b> came into contact with during their lifetime was <b>{1}</b>.",
   "MediumshipHelp": "<b>/ms yes</b> to agree\\n<b>/ms no</b> to disagree",
@@ -2370,7 +2374,6 @@
   "JudgeCanTrialNeutralB": "Can trial <color=#ffab1b>Neutral</color> <color=#046300>Benign</color>",
   "JudgeCanTrialNeutralK": "Can trial <color=#ffab1b>Neutral</color> <color=#ff1919>Killing</color>",
   "JudgeCanTrialNeutralE": "Can trial <color=#ffab1b>Neutral</color> <color=#912900>Evil</color>",
-  "JudgeCanTrialNeutralC": "Can trial <color=#ffab1b>Neutral</color> <color=#D4AF37>Chaos</color>",
   "JudgeCanTrialSidekick": "Can trial <color=#00b4eb>Sidekick</color>",
   "JudgeCanTrialInfected": "Can trial <color=#7B8968>Infected</color>",
   "JudgeCanTrialContagious": "Can trial <color=#2E8B57>Contagious</color>",
@@ -4010,6 +4013,16 @@
   "SimonDontShort": "<#ffa500>Must not do instruction</color>",
   "SimonDoMode": "<#00ffa5>Mode:</color> Do instruction",
   "SimonDontMode": "<#00ffa5>Mode:</color> Do NOT do instruction",
+  "Catcher": "Catcher",
+  "CatcherInfo": "Catch Players' Roles",
+  "CatcherInfoLong": "(Crewmates):\\nAs the Catcher, you can place traps by venting/petting. When a player steps on a trap, their role will be recorded. In the next meeting, you'll get a message of the list of roles caught in your trap.<size=80%>\\n\\nNote: You don't know who stepped on your trap and who has which role.\\nYou can place multiple traps, and you'll get a message of all roles caught in all traps.</size>",
+  "Catcher.TrapPlaceDelay": "Trap Placement Delay (after venting) (if not using pets)",
+  "Catcher.CatchRange": "Trap Catch Range",
+  "Catcher.MinPlayersTrappedToShowInfo": "Minimum Number of Players Trapped to Show Info",
+  "Catcher.TrapPlaced": "Trap placed",
+  "Catcher.CaughtRoles": "Roles caught in your traps:\\n",
+  "Catcher.NotEnoughCaughtRoles": "Not enough players have stepped on your traps to show the roles.",
+  "Catcher.Suffix": "<#00ffa5>Placing trap in</color> {0}s",
   "Generator": "Generator",
   "GeneratorInfo": "Power up the ship",
   "GeneratorInfoLong": "(Impostors):\\nAs the Generator, you generate charges every second. You can only kill/vent/shapeshift/sabotage if you have enough charges to do so. You also lose charges while shapeshifted.",
