--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -762,7 +762,7 @@
   "MaverickInfoLong": "(Neutrals):\\nAs the Maverick, you can kill much like a Serial Killer. You win with the winning team rather than alone.\\nIf you die, you lose.",
   "CursedSoulInfoLong": "(Neutrals):\\nAs the Cursed Soul, you snatch the victory if you survive to the end of the game.\\n\\nYou can snatch the win from a Jester or Executioner.\\n\\nAdditionally, you can snatch the souls of other players.\\nSoulless players win with you and count as dead.",
   "RitualistInfoLong": "(Neutrals):\\nAs the Ritualist, you can reveal the roles of other players using your kill button.\\nSingle click: Reveal role\\nDouble click: Kill\\n\\nIf you run out of reveal uses, your kill button functions normally.",
-  "PickpocketInfoLong": "(Neutrals):\\nAs the Pickpocket, you steal votes from your kills.\\nThese votes are hidden.\\n\\nKill everyone to win.",
+  "PickpocketInfoLong": "(Neutrals):\\nAs the Pickpocket, you steal votes from your kills.\\n\\nKill everyone to win.",
   "TraitorInfoLong": "(Neutrals):\\nAs the Traitor, you were an Impostor that betrayed the Impostors.\\nYou know the Impostors but they don't know you.\\nThe twist? They can kill you but you can't kill them.\\n\\nEliminate the Impostors by other means, then kill everyone else to win!",
   "VultureInfoLong": "(Neutrals):\\nAs the Vulture, report bodies to win!\\n\\nWhen you report a body, if your eat cooldown is up, you'll eat the body (makes it unreportable).\\nIf your eat ability is still on cooldown, then you'll report the body normally.\\n\\nAdditionally, you'll report bodies normally if the maximum bodies eaten per round is reached.",
   "MedusaInfoLong": "(Neutrals):\\nAs the Medusa, you can stone bodies much like cleaning a body when your kill cooldown is up.\\nStoned bodies cannot be reported.\\n\\nKill everyone to win.",
@@ -797,7 +797,7 @@
   "AvangerInfoLong": "(Add-ons):\\nHost can allow Impostor to become Avenger. If Avenger is killed, they'll revenge a random player.",
   "YoutuberInfoLong": "(Add-ons):\\nIf the YouTuber is the first player killed, they win. If not, they follow the Crewmate to win. Note: Indirect killing methods don't trigger the YouTuber's skills.",
   "EgoistInfoLong": "(Add-ons):\\nOnly impostors can get Egoist. If the impostor team wins while there's at least 1 impostor alive who isn't an Egoist, the Egoist loses.\\nIn order for the Egoist to win, <b>they must eject all other impostors</b> and stay alive.",
-  "TicketsStealerInfoLong": "(Add-ons):\\nStealers get an additional vote every time they kill someone, and their extra votes are hidden during meetings.",
+  "TicketsStealerInfoLong": "(Add-ons):\\nStealers gets additional votes every time they kill someone.",
   "DualPersonalityInfoLong": "(Add-ons):\\nNeutrals and Madmates can't become Schizophrenic. Schizophrenic will be considered as 2 players in the game. Having at least one player as Schizophrenic won't end the game if there are only them and the Impostor left.",
   "MimicInfoLong": "(Add-ons):\\nMimic is an Impostor role. When a Mimic dies, other Impostors receive a message during meetings that reveals the roles killed by the Mimic.",
   "GuesserInfoLong": "(Add-ons):\\nAs a guesser, guess roles of players in meetings to kill them.\\nGuessing incorrectly kills you instead.\\nThe guessing command is: /bt [player id] [role]\\nYou can see the player's id before the player's name, or use the /id command to view the id of all players.",
