--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -2301,6 +2301,7 @@
   "LoadingHint.44": "Did you know?\nThe Dev's favorite number is 44",
   "LoadingHint.45": "Did you know that you can use the yield statement in an iterator to provide the next value or signal the end of an iteration in a loop since async doesn't work in BepInEx?\nYeah, me neither",
   "Vision": "Vision",
+  "Outside": "Outside",
   "UnsupportedVersion": "Unsupported Among Us version.\\nPlease update Among Us.",
   "Error.MeetingException": "Error: {0}\\r\\nPlease use SHIFT+M+ENTER to end the meeting",
   "Error.InvalidRoleAssignment": "Error: Invalid role found for a player during role assignment({0})",
@@ -4334,6 +4335,7 @@
   "BlackHolePlaceCooldown": "Black Hole Place Cooldown",
   "BlackHoleDespawnMode": "Black Hole Despawn Mode",
   "BlackHoleDespawnTime": "Time After Black Hole Despawns",
+  "Abyssbringer.Suffix": "<size=80%><#00ffa5>Number of players consumed by</color> {0} <#00ffa5>active black holes:</color></size><size=70%>\\n",
   "After1PlayerEaten": "After 1 Player Was Eaten",
   "BlackHoleMovesTowardsNearestPlayer": "Black Hole Moves Towards Nearest Player",
   "BlackHoleMoveSpeed": "Black Hole Moving Speed",
