--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1366,9 +1366,11 @@
   "LawyerVision": "<color=#008080>Lawyer</color> Vision",
   "FlashmanSpeed": "<color=#ff8400>Flash</color> Speed",
   "GiantSpeed": "<color=#32a852>Giant</color> Speed",
+  "NeutralsKnowEachOther": "<color=#ffab1b>Neutrals</color> know each other",
   "LoverSuicide": "<color=#ff9ace>Lovers</color> die together",
   "NumberOfLovers": "Number of <color=#ff9ace>Lover Pairs</color> (x2 members)",
   "LoverKnowRoles": "<color=#ff9ace>Lovers</color> know the roles of each other",
+  "CrewLoversWinWithCrew": "If Both <color=#ff9ace>Lovers</color> are <color=#8cffff>Crewmates</color>, they always win with <color=#8cffff>Crewmates</color>",
   "LegacyLovers": "Legacy Lovers",
   "LovingImpostorSpawnChance": "<color=#ff9ace>Loving</color> <#ff1919>Impostor</color> Spawn Chance",
   "LIRoleForOtherImps": "Other <#ff1919>Impostors</color> see <#ff9ace>Loving</color> <#ff1919>Impostor</color> as",
@@ -1813,7 +1815,8 @@
   "RomanticProtectDuration": "Protect Duration",
   "RomanticKnowTargetRole": "<color=#ff1493>Romantic</color> knows their target's role",
   "RomanticBetTargetKnowRomantic": "Target knows who the <color=#ff1493>Romantic</color> is",
-  "RomanticArrows": "Target Has Arrows Pointing to the <color=#ff1493>Romantic</color> and vice versa",
+  "RomanticArrows": "<color=#ff1493>Romantic</color> has arrows pointing to their Partner",
+  "RomanticPartnerHasArrows": "Partner has arrows pointing to the <color=#FF1493>Romantic</color>",
   "Speedrunner": "Speedrunner",
   "SpeedrunnerInfo": "Crew wins if you finish your tasks",
   "SpeedrunnerInfoLong": "(Crewmates):\\nWhen you complete all of your tasks (and you're still alive), the game instantly ends and everyone on the crewmate team will win.",
@@ -4330,6 +4333,9 @@
   "OptionAvenger": "Can sell Avenger",
   "TwisterCooldown": "Twist Cooldown",
   "TwisterButtonText": "Twist",
+  "MainMenu.SettingsButton": "Settings",
+  "MainMenu.InventoryButton": "Inventory",
+  "MainMenu.CreditsButton": "Credits",
   "Abyssbringer": "Abyssbringer",
   "AbyssbringerInfo": "Place Black Holes",
   "AbyssbringerInfoLong": "(Impostors):\\nAs the Abyssbringer, you can place black holes. Black holes will suck in players and kill them when colliding with them.",
