--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1051,6 +1051,7 @@
   "TieMode.Default": "No ejects",
   "TieMode.All": "Eject All",
   "TieMode.Random": "Eject Random",
+  "HalvedVision": "Halved Vision",
   "Kill": "Kill",
   "Report": "Report",
   "Sabotage": "Sabotage",
@@ -1182,13 +1183,13 @@
   "GSInfo.RomanticState": "{0}",
   "GSInfo.LoversState": "Number of <#ff9ace>Lovers</color> Alive: {0}",
   "GSInfo.Tasks": "<#00ffa5>Completed Tasks:</color> {0}",
-  "GSRomanticState.0": "<#ff1493>Romantic</color> doesn't exist",
-  "GSRomanticState.1": "<#ff1493>Romantic</color> exists but hasn't picked a partner",
-  "GSRomanticState.2": "<#ff1493>Romantic</color> exists and has picked a partner",
-  "GSRomanticState.3": "<#ff1493>Romantic</color> exists, is alive, but hasn't picked a partner",
-  "GSRomanticState.6": "<#ff1493>Romantic</color> exists, has picked a partner who is dead, but Romantic is alive",
-  "GSRomanticState.8": "<#ff1493>Romantic</color> exists, has picked a partner who is alive, but Romantic is dead",
-  "GSRomanticState.24": "<#ff1493>Romantic</color> exists, has picked a partner who is alive, and Romantic is alive",
+  "GSRomanticState.0": "<#ff1493>Romantic</color> pair state: <#888888>Doesn't exist</color>",
+  "GSRomanticState.1": "<#ff1493>Romantic</color> pair state: <#888888>Doesn't exist</color>",
+  "GSRomanticState.2": "<#ff1493>Romantic</color> pair state: <#ff0000>Broken</color>",
+  "GSRomanticState.3": "<#ff1493>Romantic</color> pair state: <#888888>Doesn't exist</color>",
+  "GSRomanticState.6": "<#ff1493>Romantic</color> pair state: <#ff0000>Broken</color>",
+  "GSRomanticState.8": "<#ff1493>Romantic</color> pair state: <#ff0000>Broken</color>",
+  "GSRomanticState.24": "<#ff1493>Romantic</color> pair state: <#ff1493>Exists</color>",
   "Cooldown": "Cooldown",
   "CurseCooldown": "Curse Cooldown",
   "FreezeAfterCurseKill": "Freeze After Killing via Cursed Player",
@@ -1772,6 +1773,7 @@
   "DeathReason.Curse": "Cursed",
   "DeathReason.Consumed": "Consumed",
   "DeathReason.BadLuck": "Bad Luck",
+  "DeathReason.Asthma": "Asthma",
   "Alive": "Alive",
   "Win": " Wins!",
   "Last-": "Last ",
