--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1368,17 +1368,22 @@
   "FlashmanSpeed": "<color=#ff8400>Flash</color> Speed",
   "GiantSpeed": "<color=#32a852>Giant</color> Speed",
   "NeutralsKnowEachOther": "<color=#ffab1b>Neutrals</color> know each other",
-  "LoverSuicide": "<color=#ff9ace>Lovers</color> die together",
+  "LoverDieConsequence": "Consequence for Second <color=#ff9ace>Lover</color>, When First One Dies",
+  "LoverSuicideTime": "Suicide When",
+  "WhenNextMeetingStarts": "Next Meeting Starts",
+  "WhenNextMeetingEnds": "Next Meeting Ends",
+  "Immediately": "Immediately",
+  "Nothing": "None",
   "NumberOfLovers": "Number of <color=#ff9ace>Lover Pairs</color> (x2 members)",
   "LoverKnowRoles": "<color=#ff9ace>Lovers</color> know the roles of each other",
   "CrewLoversWinWithCrew": "If Both <color=#ff9ace>Lovers</color> are <color=#8cffff>Crewmates</color>, they always win with <color=#8cffff>Crewmates</color>",
-  "LegacyLovers": "Legacy Lovers",
+  "LegacyLovers": "Legacy <color=#ff9ace>Lovers</color>",
   "LovingImpostorSpawnChance": "<color=#ff9ace>Loving</color> <#ff1919>Impostor</color> Spawn Chance",
   "LIRoleForOtherImps": "Other <#ff1919>Impostors</color> see <#ff9ace>Loving</color> <#ff1919>Impostor</color> as",
-  "PrivateChat": "Enable Private Chat for Lovers <#ffff00>(VERY EXPERIMENTAL!!!!)</color>",
-  "GuessAbility": "Guessers Can Guess Lovers",
+  "PrivateChat": "Enable Private Chat for <color=#ff9ace>Lovers</color> <#ffff00>(VERY EXPERIMENTAL!!!!)</color>",
+  "GuessAbility": "Guessers Can Guess <color=#ff9ace>Lovers</color>",
   "Untouched": "Untouched",
-  "GuessLovers": "Sorry, <color=#ff9ace>Lovers</color> cannot be guessed.",
+  "GuessLovers": "Sorry, host's settings do not allow to guess <color=#ff9ace>Lovers</color>.",
   "VanillaCrewmateCannotBeGuessed": "Crewmate role cannot be guessed",
   "GuessVanillaCrewmate": "Host settings don't allow to guess someone as the vanilla Crewmate",
   "TrapperBlockMoveTime": "Freeze time",
