New game mode: Capture The Flag

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1906,6 +1906,7 @@
   "GuessAdtRole": "Unfortunately, the Host's settings do not allow you to guess add-ons",
   "GuessImpRole": "Unfortunately, the Host's settings do not allow Impostors to guess Impostor roles.",
   "GuessCrewRole": "Unfortunately, the Host's settings do not allow crewmates to guess crewmate roles.",
+  "GuessMarkseekerTarget": "You can't guess the target of the Markseeker",
   "GuessKill": "<b>{0}</b> was guessed",
   "GuessNull": "Please select an ID of a living player to guess their role",
   "GuessHelp": "Instructions: /bt [Player ID] [Role Name] \\nExample: /bt 3 Bait \\nYou can see the player IDs before everyone's names \\n or use the /id command to list the player IDs",
@@ -3914,6 +3915,24 @@
   "Runner": "Speedrunner",
   "RunnerInfo": "COMPLETE TASKS AND KILL EVERYONE FIRST TO WIN",
   "RunnerInfoLong": "COMPLETE TASKS AND KILL EVERYONE FIRST TO WIN",
+  "CaptureTheFlag": "CAPTURE THE FLAG",
+  "ModeCaptureTheFlag": "Gamemode: Capture The Flag",
+  "ModeDescribe.CaptureTheFlag": "In the Capture The Flag gamemode, there are two teams: Yellow and Blue. Each team has a flag in their base. The goal is to capture the enemy's flag and bring it back to your base. The first team to capture the enemy's flag wins!\\n\\nYou can grab the flag by petting your pet near it.\\n\\nPlayers can be tagged by the enemy team, which will send them back to their base or kill them, depending on the settings. Players who are carrying a flag cannot tag other players.",
+  "CTF_AlertTeamMembersOfFlagTaken": "Alert Team Members When their Flag is Taken",
+  "CTF_TaggedPlayersGet": "Tagged Players get",
+  "CTF_TaggedPlayersGet.SentBackToBase": "Sent Back to Base",
+  "CTF_TaggedPlayersGet.Killed": "Killed",
+  "CTF_WhenFlagCarrierGetsTagged": "When the Flag Carrier Gets Tagged, the Flag is",
+  "CTF_WhenFlagCarrierGetsTagged.FlagIsDropped": "Dropped",
+  "CTF_WhenFlagCarrierGetsTagged.FlagIsReturned": "Returned",
+  "CTFPlayer": "Capture The Flag",
+  "CTFPlayerInfo": "CAPTURE THE ENEMY'S FLAG TO WIN",
+  "CTFPlayerInfoLong": "CAPTURE THE ENEMY'S FLAG TO WIN",
+  "CTF_FlagTaken": "The enemy took your flag!",
+  "CTF_BlueTeamWins": "The Blue Team wins!",
+  "CTF_YellowTeamWins": "The Yellow Team wins!",
+  "CTF_PlayerStats": "<#00ffa5>Total Flag Carrying Time: <#ffffff>{0}s</color> - Total Tags: <#ffffff>{1}</color></color>",
+  "CTF_Notify_EnemyTeamRoom": "The enemy team is in <#00ffa5>{0}</color>",
   "HideAndSeek": "HIDE AND SEEK",
   "ModeHideAndSeek": "Gamemode: Hide And Seek",
   "ModeDescribe.HideAndSeek": "In the Hide And Seek gamemode, seekers have to kill all hiders, while hiders have to complete all tasks without being killed in order to win.\\nIf the time limit reaches 0, hiders win.\\n\\nRoles: Hider, Seeker, Fox, Troll, Jumper, Detector, Jet, Dasher, Locator, Venter, Agent, Taskinator",
@@ -4344,8 +4363,8 @@
   "BlackHolePlaceCooldown": "Black Hole Place Cooldown",
   "BlackHoleDespawnMode": "Black Hole Despawn Mode",
   "BlackHoleDespawnTime": "Time After Black Hole Despawns",
-  "Abyssbringer.Suffix": "<size=80%><#00ffa5>Number of players consumed by</color> {0} <#00ffa5>active black holes:</color></size><size=70%>\\n",
-  "Abyssbringer.Suffix.BlackHole": "<#00ffa5>{0}:</color> {1}</size>",
+  "Abyssbringer.Suffix": "<size=80%><#00ffa5>Number of players consumed by</color> {0} <#00ffa5>active black holes:</color></size><size=70%>\\n{1}",
+  "Abyssbringer.Suffix.BlackHole": "<#00ffa5>{0}:</color> {1}",
   "After1PlayerEaten": "After 1 Player Was Eaten",
   "BlackHoleMovesTowardsNearestPlayer": "Black Hole Moves Towards Nearest Player",
   "BlackHoleMoveSpeed": "Black Hole Moving Speed",
