Add Framer & Backstabber, Try fixing CNO (no success), other fixes

--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -1408,6 +1408,9 @@
   "PsychicCanSeeNum": "Max number of red names",
   "PsychicFresh": "New red names every meeting",
   "DetectiveCanknowKiller": "Can find the killer's role",
+  "DetectiveCanknowDeathReason": "Can find the cause of death",
+  "DetectiveCanknowAddons": "Can find the dead player's add-ons",
+  "DetectiveCanknowKillTime": "Can find how long ago the player died",
   "ParanoiaVentCooldown": "Vent Cooldown",
   "ParanoiaNumOfUseButton": "Max number of portable buttons",
   "EveryOneKnowSuperStar": "Everyone knows the <color=#f6f657>Super Star</color>",
@@ -1898,6 +1901,9 @@
   "DetectiveNoticeVictim": "According to your investigation,\\nthe victim (<b>{0}</b>) had the role [{1}]",
   "DetectiveNoticeKiller": "\\nThe killer's role is <b>{0}</b>",
   "DetectiveNoticeKillerNotFound": "The Detective couldn't find evidence leading to a murderer, this is most likely suicide.",
+  "DetectiveNoticeDeathReason": "\\nThe victim's cause of death is <b>{0}</b>",
+  "DetectiveNoticeAddons": "\\nThe victim's add-ons are: <b>{0}</b>",
+  "DetectiveNoticeKillTime": "\\nThe victim died <b>{0}</b> seconds ago",
   "SleuthMsg": "{0}'s role is: {1}",
   "GodNoticeAlive": "During the meeting, each player felt a revelation from heaven, and it turned out that God is still alive!",
   "WorkaholicAdviceAlive": "It's not recommended to kill or vote <b>{0}</b> out. Doing so will help them finish their tasks quicker.",
@@ -3605,6 +3611,16 @@
   "LibrarianNormalMode": "Normal",
   "CanKillWhileShifted": "Can Kill While Shapeshifting",
   "Shapeshift": "Shapeshift",
+  "Framer": "Framer",
+  "FramerInfo": "Frame Other Players",
+  "FramerInfoLong": "(Impostors):\\nAs the Framer, single click with your kill button on someone to frame them, making the game think they're on the impostor team. Double click to kill normally.",
+  "Framer.TargetFramedNotify": "The game now thinks {0} is an <#ff1919>impostor</color>",
+  "Backstabber": "Backstabber",
+  "BackstabberInfo": "Stab a Team in the Back",
+  "BackstabberInfoLong": "(Neutral):\\nAs the Backstabber, you can optionally kill 1 player. If you don't kill anyone, you will win with the crewmates. If you kill an Impostor or a Madmate, you will win with the winning Neutral Killer. If you kill anyone other than an Impostor or a Madmate, you will win with the Impostors.",
+  "Backstabber.MurderNotify": "Your kill target was {0}\\nThis means, you'll win with {1}",
+  "BackstabberTeam.Imp": "the <#ff1919>Impostors</color>",
+  "BackstabberTeam.NK": "a <#ffab1b>Neutral Killer</color>",
   "Postman": "Postman",
   "PostmanInfo": "Deliver Mail to Everyone!",
   "PostmanInfoLong": "(Neutral):\\nAs the Postman, your job is to deliver mail to everyone. You'll always have a target, and you need to click your kill button on that target to deliver the mail to them. When you've delivered mail to everyone, your win condition is satisfied. You'll win with the winning team, no matter what happens.",
