--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -3611,6 +3611,7 @@
   "LibrarianNormalMode": "Normal",
   "CanKillWhileShifted": "Can Kill While Shapeshifting",
   "Shapeshift": "Shapeshift",
+  "UsesPetInsteadOfKillNotice": "<#ffff00>⚠ As this role, you need to use your pet button as your kill button!</color>",
   "Framer": "Framer",
   "FramerInfo": "Frame Other Players",
   "FramerInfoLong": "(Impostors):\\nAs the Framer, single click with your kill button on someone to frame them, making the game think they're on the impostor team. Double click to kill normally.",
@@ -3621,6 +3622,8 @@
   "Backstabber.MurderNotify": "Your kill target was {0}\\nThis means, you'll win with {1}",
   "BackstabberTeam.Imp": "the <#ff1919>Impostors</color>",
   "BackstabberTeam.NK": "a <#ffab1b>Neutral Killer</color>",
+  "Backstabber.RevealAfterKilling": "Revealed after killing",
+  "GuessBackstabber": "You cannot guess a revealed Backstabber.",
   "Postman": "Postman",
   "PostmanInfo": "Deliver Mail to Everyone!",
   "PostmanInfoLong": "(Neutral):\\nAs the Postman, your job is to deliver mail to everyone. You'll always have a target, and you need to click your kill button on that target to deliver the mail to them. When you've delivered mail to everyone, your win condition is satisfied. You'll win with the winning team, no matter what happens.",
