--- a/Resources/Lang/en_US.json
+++ b/Resources/Lang/en_US.json
@@ -4392,6 +4392,7 @@
   "After1PlayerEaten": "After 1 Player Was Eaten",
   "BlackHoleMovesTowardsNearestPlayer": "Black Hole Moves Towards Nearest Player",
   "BlackHoleMoveSpeed": "Black Hole Moving Speed",
+  "BlackHoleRadius": "Black Hole Consuming Radius",
   "Sleep": "Sleep",
   "SleepInfo": "You Sleep During Lights Out",
   "SleepInfoLong": "(Add-ons):\\nYou sleep during lights out. You can't see anything, and you cannot move. You can only wake up when the lights are back on. If someone with the Glow add-on comes near you, you fully wake up and lose this add-on.",
